--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'MS Teams Notifications'
+name: 'MS Teams Notification'
 description: 'Send MS Teams notifications from workflows easily'
 author: 'sergioaten'
 
